--- a/.i3/config
+++ b/.i3/config
@@ -7,7 +7,7 @@ font xft:Inconsolata 8
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-bindsym $mod+Return exec urxvtc
+bindsym $mod+Return exec urxvt
 bindsym $mod+Shift+aring kill
 bindsym $mod+e exec $(dmenu_path_c | dmenu -fn 'Xft:Inconsolata:size=10' -nf '#9f0' -sf '#222' -sb '#9f0' -nb '#333')
 
