--- a/.tmux.conf
+++ b/.tmux.conf
@@ -45,6 +45,8 @@ set-option -g status-right '#[fg=black,bg=cyan]#(np=`sh $HOME/bin/np.sh`; [ -n "
 
 # Window options {{{
 set-window-option -g mode-keys vi
+# Send proper keys to stuff like weechat
+set-window-option -g xterm-keys on
 
 # Make mouse useful in copy mode
 set-window-option -g mode-mouse on
@@ -92,8 +94,8 @@ bind-key M \
     set -g mode-mouse off\;\
     display "Mouse: off"
 
-bind-key y run "tmux show-buffer | xclip"
-bind-key p run "tmux set-buffer -- \"$(xclip -o)\"; tmux paste-buffer"
+bind-key y run-shell -b "tmux show-buffer | xclip"
+bind-key p run-shell -b "tmux set-buffer -- \"$(xclip -o)\"; tmux paste-buffer"
 
 bind-key : command-prompt
 
