--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -1,3 +1,9 @@
 set defsearch=duckduckgo
 
+set editor='urxvt -e vim -f'
+
+com -nargs=0 splay :execute 'silent !splay "' + content.location.href + '" &'
+map , <Leader>
+map <Leader>s :splay<CR>
+
 " vim: set ft=vim:
