--- a/.i3/config
+++ b/.i3/config
@@ -9,7 +9,9 @@ floating_modifier $mod
 
 bindsym $mod+Return exec urxvt
 bindsym $mod+Shift+aring kill
-bindsym $mod+e exec $(dmenu_path_c | dmenu -fn 'Xft:Inconsolata:size=10' -nf '#9f0' -sf '#222' -sb '#9f0' -nb '#333')
+bindsym $mod+e exec $(dmenu_run -i -fn 'Xft:Inconsolata:size=10' -nf '#9f0' -sf '#222' -sb '#9f0' -nb '#333')
+
+bindsym $mod+r exec interrobang
 
 # Commands
 bindsym $mod+F2 exec xclip -o -selection clipboard | xclip
