--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,12 +33,12 @@ set-option -g message-fg white
 set-option -g message-command-bg colour232
 set-option -g message-command-fg magenta
 set-option -g status-bg colour232
-set-option -g status-fg brightgreen
+set-option -g status-fg green
 set-option -g status-justify left
 set-option -g status-interval 2
-set-option -g status-left '#[bg=brightred,fg=black] #S #[default]'
+set-option -g status-left ''
 set-option -g status-right-length 100
-set-option -g status-right '#[fg=black,bg=cyan]#(np=`sh $HOME/bin/np.sh`; [ -n "$np" ] && echo " $np ";)#[fg=black,bg=magenta] #($HOME/git/utils/netspeed) #[fg=black,bg=red]#(x=`cat /tmp/pacman_updates`; [ $x -gt 0 ] && echo " Updates: $x ";)#[fg=black,bg=green] #(cut -d " " -f 1,4 /proc/loadavg) #[default]#[fg=black,bg=white] %H:%M #[default]'
+set-option -g status-right '[ #S ]'
 # }}}
 
 # }}}
@@ -64,8 +64,8 @@ set-window-option -g clock-mode-style 24
 
 # StatusBar {{{
 # Highlighting the active window in status bar
-set-window-option -g window-status-format "#I.#W#F"
-set-window-option -g window-status-current-format " #W "
+set-window-option -g window-status-format "#[bg=cyan,fg=black] #I #[default] #W#F "
+set-window-option -g window-status-current-format "#[bg=cyan,fg=black] #F #[bg=green,fg=black] #W "
 set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-bg white
 set-window-option -g window-status-bell-attr none
@@ -74,7 +74,7 @@ set-window-option -g window-status-bell-bg red
 set-window-option -g window-status-activity-fg black
 set-window-option -g window-status-activity-bg red
 set-window-option -g window-status-separator ''
-set-window-option -g window-status-fg brightblack
+set-window-option -g window-status-fg green
 # }}}
 
 # Bindings {{{
