--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,7 +32,7 @@ set-option -g message-bg colour232
 set-option -g message-fg white
 set-option -g message-command-bg colour232
 set-option -g message-command-fg magenta
-set-option -g status-bg colour232
+set-option -g status-bg default
 set-option -g status-fg green
 set-option -g status-justify left
 set-option -g status-interval 2
