Added net iface and more i3 specific settings.

--- a/.i3/config
+++ b/.i3/config
@@ -148,3 +148,5 @@ for_window [class="MPlayer"] floating enable, border 1pixel
 for_window [class="URxvt"] border 1pixel
 for_window [title="keepassx"] floating enable
 for_window [class="feh"] floating enable, border 1pixel
+for_window [class="Wine"] floating enable
+for_window [class="Steam"] floating enable
