tmux: Switch layout binding.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -149,13 +149,15 @@ bind-key C-l select-pane -L
 bind-key C-h select-pane -R
 bind-key C-j select-pane -D
 bind-key C-k select-pane -U
-bind-key l select-pane -L
-bind-key h select-pane -R
+bind-key h select-pane -L
+bind-key l select-pane -R
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key K swap-pane -U
 bind-key J swap-pane -D
 bind-key S command-prompt -p "Swap with pane num.:" "swap-pane -s:.'%%'"
+
+bind-key -r > select-layout -n
 
 bind-key z last-pane
 
