conky: np.sh executed each interval run.

--- a/.conkyrc
+++ b/.conkyrc
@@ -14,7 +14,7 @@ net_avg_samples 2
 if_up_strictness address
 
 TEXT
-^fg(\#ff3180)^i(/home/xintron/.xmonad/xbm/music.xbm) ${execi 2 np.sh}^fg()    \
+^fg(\#ff3180)^i(/home/xintron/.xmonad/xbm/music.xbm) ${exec np.sh}^fg()    \
 ${if_existing /sys/class/power_supply/AC0/online 0}\
 ${if_match ${battery_percent} < 20}^fg(\#fb1900)^i(/home/xintron/.xmonad/xbm/bat_low_02.xbm)${else}^fg(\#a9dc3a)^i(/home/xintron/.xmonad/xbm/bat_full_02.xbm)${endif} ${battery_percent}% ${battery_time}^fg()    \
 ${endif}\
