--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,6 @@
 unbind-key -a
+
+if-shell "uname | grep -q Darwin" "set-option -g default-command 'reattach-to-user-namespace -l zsh'"
 # Options {{{
 # Change prefix key to Ctrl+a
 set-option -g prefix C-z
