--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,17 +30,18 @@ set-option -g display-panes-colour white
 set-option -g display-panes-active-colour red
 
 # Statusbar {{{
-set-option -g message-bg colour232
-set-option -g message-fg white
-set-option -g message-command-bg colour232
+set-option -g message-bg colour240
+set-option -g message-fg yellow
+set-option -g message-command-bg colour240
 set-option -g message-command-fg magenta
-set-option -g status-bg default
-set-option -g status-fg green
-set-option -g status-justify left
+set-option -g status-bg colour240
+set-option -g status-fg yellow
+set-option -g status-justify center
 set-option -g status-interval 2
-set-option -g status-left ''
+set-option -g status-left '#[bg=magenta,fg=black] %d %a, %H:%M '
+set-option -g status-left-length 20
 set-option -g status-right-length 100
-set-option -g status-right '[ #S ]'
+set-option -g status-right '#[bg=white,fg=black] #S '
 # }}}
 
 # }}}
@@ -66,17 +67,15 @@ set-window-option -g clock-mode-style 24
 
 # StatusBar {{{
 # Highlighting the active window in status bar
-set-window-option -g window-status-format "#[bg=cyan,fg=black] #I #[default] #W#F"
-set-window-option -g window-status-current-format "#[bg=cyan,fg=black] #F #[bg=green,fg=black] #W "
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-bg white
+set-window-option -g window-status-format "#[bg=yellow,fg=black] #I #[default] #W#F"
+set-window-option -g window-status-current-format "#[bg=yellow,fg=black] #F #[bg=black,fg=white] #W "
 set-window-option -g window-status-bell-attr none
 set-window-option -g window-status-bell-fg black
 set-window-option -g window-status-bell-bg red
 set-window-option -g window-status-activity-fg black
 set-window-option -g window-status-activity-bg red
 set-window-option -g window-status-separator ' '
-set-window-option -g window-status-fg green
+set-window-option -g window-status-fg yellow
 # }}}
 
 # Bindings {{{
