--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,7 +36,7 @@ set-option -g message-command-bg colour240
 set-option -g message-command-fg magenta
 set-option -g status-bg colour240
 set-option -g status-fg yellow
-set-option -g status-justify center
+set-option -g status-justify centre
 set-option -g status-interval 2
 set-option -g status-left '#[bg=magenta,fg=black] %d %a, %H:%M '
 set-option -g status-left-length 20
@@ -109,7 +109,8 @@ bind-key , command-prompt -I "#W" "rename-window '%%'"
 bind-key K confirm-before -p "Kill window: #W (y/N)" "kill-window"
 
 # Windows {{{
-bind-key w choose-window
+# If we have percol, use it
+if-shell "which percol" "bind-key w split-window 'tmux lsw | percol | cut -d\":\" -f1 | xargs tmux select-window -t'" "bind-key w choose-window"
 bind-key C-z last-window
 
 bind-key L choose-session "link-window -t '%%'"
@@ -146,16 +147,12 @@ bind-key | split-window -h
 bind-key - split-window -v
 
 # Pane
-bind-key C-l select-pane -L
-bind-key C-h select-pane -R
-bind-key C-j select-pane -D
-bind-key C-k select-pane -U
 bind-key h select-pane -L
 bind-key l select-pane -R
 bind-key j select-pane -D
 bind-key k select-pane -U
-bind-key K swap-pane -U
-bind-key J swap-pane -D
+bind-key C-k swap-pane -U
+bind-key C-j swap-pane -D
 bind-key S command-prompt -p "Swap with pane num.:" "swap-pane -s:.'%%'"
 
 bind-key -r > select-layout -n
