--- a/.tmux.conf
+++ b/.tmux.conf
@@ -68,7 +68,7 @@ set-window-option -g clock-mode-style 24
 # StatusBar {{{
 # Highlighting the active window in status bar
 set-window-option -g window-status-format "#[bg=yellow,fg=black] #I #[default] #W#F"
-set-window-option -g window-status-current-format "#[bg=yellow,fg=black] #F #[bg=black,fg=white] #W "
+set-window-option -g window-status-current-format "#[bg=yellow,fg=black] #F #[bg=brightgreen,fg=black] #W "
 set-window-option -g window-status-bell-attr none
 set-window-option -g window-status-bell-fg black
 set-window-option -g window-status-bell-bg red
