Tmux statusbar updates.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,14 +34,16 @@ set-option -g message-bg colour240
 set-option -g message-fg yellow
 set-option -g message-command-bg colour240
 set-option -g message-command-fg magenta
-set-option -g status-bg colour240
+set-option -g status-bg colour0
 set-option -g status-fg yellow
-set-option -g status-justify centre
-set-option -g status-interval 2
-set-option -g status-left '#[bg=magenta,fg=black] %d %a, %H:%M '
+set-option -g status-justify left
+set-option -g status-interval 1
+set-option -g status-left '#[fg=colour5] #S '
 set-option -g status-left-length 20
 set-option -g status-right-length 100
-set-option -g status-right '#[bg=white,fg=black] #S '
+set-option -g status-right \
+'#[fg=colour5]load #(cut -d" " -f 1-2 /proc/loadavg) \
+#[default]| #[fg=colour10]%a %b %d %H:%M:%S'
 # }}}
 
 # }}}
@@ -67,14 +69,12 @@ set-window-option -g clock-mode-style 24
 
 # StatusBar {{{
 # Highlighting the active window in status bar
-set-window-option -g window-status-format "#[bg=yellow,fg=black] #I #[default] #W#F"
-set-window-option -g window-status-current-format "#[bg=yellow,fg=black] #F #[bg=brightgreen,fg=black] #W "
+set-window-option -g window-status-format "#[fg=colour4]#I#[default] #W#F"
+set-window-option -g window-status-current-format "#[fg=colour4] #I #W#F"
 set-window-option -g window-status-bell-attr none
-set-window-option -g window-status-bell-fg black
-set-window-option -g window-status-bell-bg red
-set-window-option -g window-status-activity-fg black
-set-window-option -g window-status-activity-bg red
-set-window-option -g window-status-separator ' '
+set-window-option -g window-status-bell-fg colour1
+set-window-option -g window-status-activity-fg colour1
+set-window-option -g window-status-separator ' | '
 set-window-option -g window-status-fg yellow
 # }}}
 
