--- a/.config/twmn/twmn.conf
+++ b/.config/twmn/twmn.conf
@@ -1,18 +1,20 @@
 [gui]
-absolute_position=
+absolute_position=a
 always_on_top=true
 background_color=#121212
 bounce=true
-font=xft:DejaVu Sans Mono
-font_size=16
-foreground_color=#9EE01B
-height=30
-in_animation=38
-in_animation_duration=1000
+bounce_duration=500
+font=DejaVu Sans
+font_size=12
+foreground_color=#12D5D5
+height=25
+in_animation=25
+in_animation_duration=750
+opacity=100
 out_animation=13
 out_animation_duration=1000
 position=top_center
-screen=
+screen=1
 
 [icons]
 critical_icon=
@@ -21,14 +23,7 @@ warning_icon=
 
 [main]
 activate_command=
-duration=8000
+duration=3000
 enable_shortcuts=true
 port=9797
 sound_command=
-
-[shortcuts]
-activate=Return
-hide=X
-modifiers=Alt+
-next=J
-previous=K
