--- a/.tmux.conf
+++ b/.tmux.conf
@@ -116,8 +116,7 @@ bind-key C-z last-window
 bind-key L choose-session "link-window -t '%%'"
 
 bind-key c new-window
-# Start in the home-directory
-bind-key C new-window -c "~"
+bind-key C kill-window
 
 bind-key -r C-n next-window
 bind-key -r C-p previous-window
@@ -156,6 +155,7 @@ bind-key C-j swap-pane -D
 bind-key S command-prompt -p "Swap with pane num.:" "swap-pane -s:.'%%'"
 
 bind-key -r > select-layout -n
+bind-key + select-layout '8d2f,191x72,0,0[191x7,0,0,153,191x64,0,8,149]'
 
 bind-key z last-pane
 
