neovim update, rofi theme and general vim plugin fixes.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -53,9 +53,6 @@ set-window-option -g mode-keys vi
 # Send proper keys to stuff like weechat
 set-window-option -g xterm-keys on
 
-# Make mouse useful in copy mode
-set-window-option -g mode-mouse on
-
 set-window-option -g mode-bg green
 
 # Notifying if other windows has activities
@@ -95,8 +92,8 @@ bind-key M \
     set -g mode-mouse off\;\
     display "Mouse: off"
 
-bind-key y run-shell -b "tmux show-buffer | xclip"
-bind-key p run-shell -b "tmux set-buffer -- \"$(xclip -o)\"; tmux paste-buffer"
+bind-key y run-shell -b "tmux show-buffer | xsel -p -i"
+bind-key p run-shell -b "tmux set-buffer -- \"$(xsel -p -i)\"; tmux paste-buffer"
 
 bind-key : command-prompt
 
