--- a/.tmux.conf
+++ b/.tmux.conf
@@ -77,7 +77,7 @@ set-window-option -g window-status-fg yellow
 
 # Bindings {{{
 # Pass through the prefix
-bind-key t send-keys C-z
+bind-key t send-prefix
 
 bind-key ? list-keys
 
