--- a/.gitmodules
+++ b/.gitmodules
@@ -7,12 +7,12 @@
 [submodule ".zsh/modules/zsh-syntax-highlighting"]
 	path = .zsh/modules/zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
-[submodule ".vim/bundle/neobundle.vim"]
-	path = .vim/bundle/neobundle.vim
-	url = https://github.com/Shougo/neobundle.vim.git
 [submodule "base16-builder"]
 	path = base16-builder
 	url = https://github.com/chriskempson/base16-builder.git
 [submodule "gruvbox-contrib"]
 	path = gruvbox-contrib
 	url = https://github.com/morhetz/gruvbox-contrib
+[submodule ".config/nvim/autoload/vim-plug"]
+	path = .config/nvim/autoload/vim-plug
+	url = https://github.com/junegunn/vim-plug.git
