--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,8 @@ set-option -g set-titles on
 set-option -g default-terminal screen-256color
 # How long should repeats be valid (ms)
 set-option -g repeat-time 750
+# Add support for true colors by forcing it
+set-option -ga terminal-overrides ",xterm-termite:Tc"
 
 set-option -g escape-time 0
 set-option -g renumber-windows on
@@ -57,7 +59,6 @@ set-window-option -g mode-bg green
 
 # Notifying if other windows has activities
 set-window-option -g monitor-activity off
-set-window-option -g utf8 on
 
 # Clock
 set-window-option -g clock-mode-colour green
