bspwm: rotate windows on the local screen and not globally

--- a/.config/redshift.conf
+++ b/.config/redshift.conf
@@ -1,7 +1,8 @@
-; vim: ft=ini:
+; vim: ft=dosini:
 [redshift]
 adjustment-method=randr
 location-provider=manual
+temp-day=6500
 
 [manual]
 lat=55.6058
