--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule ".config/nvim/autoload/vim-plug"]
 	path = .config/nvim/autoload/vim-plug
 	url = https://github.com/junegunn/vim-plug.git
+[submodule ".tmux/plugins/tmp"]
+	path = .tmux/plugins/tmp
+	url = https://github.com/tmux-plugins/tpm
