--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,7 @@
-unbind-key -a
+#unbind-key -a
 
 if-shell "uname | grep -q Darwin" "set-option -g default-command 'reattach-to-user-namespace -l zsh'"
 # Options {{{
-# Change prefix key to Ctrl+a
-set-option -g prefix C-z
-
 set-option -g set-titles on
 set-option -g default-terminal screen-256color
 # How long should repeats be valid (ms)
@@ -30,6 +27,9 @@ set-option -g display-time 2000
 set-option -g display-panes-time 2000
 set-option -g display-panes-colour white
 set-option -g display-panes-active-colour red
+
+# Support the yank plugin in vi mode
+set-option -g @shell_mode 'vi'
 
 # Statusbar {{{
 set-option -g message-bg colour240
@@ -76,94 +76,11 @@ set-window-option -g window-status-separator ' | '
 set-window-option -g window-status-fg yellow
 # }}}
 
-# Bindings {{{
-# Pass through the prefix
-bind-key t send-prefix
+# Plugins {{{
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
 
-bind-key ? list-keys
-
-# Copy mode
-bind-key Escape copy-mode
-# Use Vi mode
-bind-key m \
-    set -g mode-mouse on\;\
-    display "Mouse: ON"
-
-bind-key M \
-    set -g mode-mouse off\;\
-    display "Mouse: off"
-
-bind-key y run-shell -b "tmux show-buffer | xsel -p -i"
-bind-key p run-shell -b "tmux set-buffer -- \"$(xsel -p -i)\"; tmux paste-buffer"
-
-bind-key : command-prompt
-
-bind-key d detach-client
-
-bind-key s choose-session
-
-bind-key , command-prompt -I "#W" "rename-window '%%'"
-
-bind-key K confirm-before -p "Kill window: #W (y/N)" "kill-window"
-
-# Windows {{{
-# If we have percol, use it
-if-shell "which percol" "bind-key w split-window 'tmux lsw | percol | cut -d\":\" -f1 | xargs tmux select-window -t'" "bind-key w choose-window"
-bind-key C-z last-window
-
-bind-key L choose-session "link-window -t '%%'"
-
-bind-key c new-window
-bind-key C kill-window
-
-bind-key -r C-n next-window
-bind-key -r C-p previous-window
-bind-key -r N swap-window -t:+
-bind-key -r P swap-window -t:-
-
-bind-key 0 select-window -t :0
-bind-key 1 select-window -t :1
-bind-key 2 select-window -t :2
-bind-key 3 select-window -t :3
-bind-key 4 select-window -t :4
-bind-key 5 select-window -t :5
-bind-key 6 select-window -t :6
-bind-key 7 select-window -t :7
-bind-key 8 select-window -t :8
-bind-key 9 select-window -t :9
-# }}}
-
-# Panes {{{
-bind-key v choose-window "move-pane -ht '%%'"
-bind-key b break-pane -d
-
-bind-key D display-panes
-
-# More straight forward key binding for splitting
-bind-key | split-window -h
-bind-key - split-window -v
-
-# Pane
-bind-key h select-pane -L
-bind-key l select-pane -R
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key C-k swap-pane -U
-bind-key C-j swap-pane -D
-bind-key S command-prompt -p "Swap with pane num.:" "swap-pane -s:.'%%'"
-
-bind-key -r > select-layout -n
-bind-key + select-layout '8d2f,191x72,0,0[191x7,0,0,153,191x64,0,8,149]'
-
-bind-key z last-pane
-
-# Resize
-bind-key -r K resize-pane -U 10
-bind-key -r J resize-pane -D 10
-bind-key -r H resize-pane -L 10
-bind-key -r L resize-pane -R 10
-# }}}
-
-# }}}
+run '~/.tmux/plugins/tmp/tpm'
+#}}}
 
 # vim:foldmethod=marker:ft=tmux
