bar under bspwm, dynamic geolocation for redshift and no static TZ

--- a/.config/redshift.conf
+++ b/.config/redshift.conf
@@ -1,9 +1,9 @@
 ; vim: ft=dosini:
 [redshift]
 adjustment-method=randr
-location-provider=manual
+location-provider=geoclue2
 temp-day=6500
 
-[manual]
-lat=55.6058
-lon=13.0358
+;[manual]
+;lat=55.6058
+;lon=13.0358
