--- a/.gitmodules
+++ b/.gitmodules
@@ -13,9 +13,9 @@
 [submodule "gruvbox-contrib"]
 	path = gruvbox-contrib
 	url = https://github.com/morhetz/gruvbox-contrib
-[submodule ".config/nvim/autoload/vim-plug"]
-	path = .config/nvim/autoload/vim-plug
-	url = https://github.com/junegunn/vim-plug.git
 [submodule ".tmux/plugins/tmp"]
 	path = .tmux/plugins/tmp
 	url = https://github.com/tmux-plugins/tpm
+[submodule ".config/nvim/dein/repos/github.com/Shougo/dein.vim"]
+	path = .config/nvim/dein/repos/github.com/Shougo/dein.vim
+	url = https://github.com/Shougo/dein.vim.git
