--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -92,7 +92,7 @@ interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.foreground-alt}
 format-underline = ${colors.red}
-label = %percentage%
+label = %percentage%%
 
 [module/date]
 type = internal/date
@@ -127,7 +127,7 @@ format-full-prefix = " "
 format-full-prefix-foreground = ${colors.foreground-alt}
 format-full-underline = ${self.format-charging-underline}
 
-label-discharging = "%percentage% %time%"
+label-discharging = "%percentage%% %time%"
 
 ramp-capacity-0 = ""
 ramp-capacity-1 = ""
