tmux: Transparent statusbar color (default).

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,20 +32,18 @@ set-option -g display-panes-active-colour red
 set-option -g @shell_mode 'vi'
 
 # Statusbar {{{
-set-option -g message-bg colour240
+set-option -g message-bg colour0
 set-option -g message-fg yellow
-set-option -g message-command-bg colour240
+set-option -g message-command-bg colour0
 set-option -g message-command-fg magenta
-set-option -g status-bg colour0
+set-option -g status-bg default
 set-option -g status-fg yellow
 set-option -g status-justify left
 set-option -g status-interval 1
 set-option -g status-left '#[fg=colour5] #S '
 set-option -g status-left-length 20
 set-option -g status-right-length 100
-set-option -g status-right \
-'#[fg=colour5]load #(cut -d" " -f 1-2 /proc/loadavg) \
-#[default]| #[fg=colour10]%a %b %d %H:%M:%S'
+set-option -g status-right '#[fg=colour10]%a %b %d %H:%M:%S'
 # }}}
 
 # }}}
