--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,11 +3,11 @@
 if-shell "uname | grep -q Darwin" "set-option -g default-command 'reattach-to-user-namespace -l zsh'"
 # Options {{{
 set-option -g set-titles on
-set-option -g default-terminal screen-256color
+set-option -g default-terminal xterm-256color
 # How long should repeats be valid (ms)
 set-option -g repeat-time 750
 # Add support for true colors by forcing it
-set-option -ga terminal-overrides ",xterm-termite:Tc"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
 set-option -g escape-time 0
 set-option -g renumber-windows on
