feat(mise): use neovim latest

--- a/mise/main-config.toml
+++ b/mise/main-config.toml
@@ -21,7 +21,7 @@ zellij = "latest"
 starship = "latest"
 
 # --- Editor ---
-neovim = "nightly"
+neovim = "latest"
 
 # --- AI & Assistants ---
 opencode = "latest"
